--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -193,6 +192,14 @@ img {
   margin-bottom: 555px;
 }
 
+.bigScreen {
+  display: block;
+}
+
+.littleScreen {
+  display: none;
+}
+
 .text {
   font-family: SpaceMono;
   font-style: normal;
@@ -219,10 +226,6 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-}
-
-.meteor2 {
-  margin: 0 0 15%;
 }
 
 .pageTitle {
@@ -558,7 +561,6 @@ img {
 }
 
 .carousel-3d {
-  margin-right: 50px;
   -ms-flex-item-align: center;
       align-self: center;
   width: 700px;
@@ -689,8 +691,6 @@ button {
   font: inherit;
   color: inherit;
   background-color: transparent;
-  /* отображаем курсор в виде руки при наведении; некоторые
-    считают, что необходимо оставлять стрелочный вид для кнопок */
   cursor: pointer;
 }
 
@@ -698,9 +698,23 @@ button {
   padding: 25px 41px 25px;
 }
 
-@media (max-width: 1600px) {
+@media (min-width: 1610px) {
+  .bigScreen {
+    display: block;
+  }
+  .littleScreen {
+    display: none;
+  }
+}
+
+@media (max-width: 1610px) {
   .container {
     max-width: 1280px;
+  }
+  .links {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
   .want {
     font-size: 140px;
@@ -710,6 +724,18 @@ button {
   }
   .w2 {
     left: -168px;
+  }
+  .meteors {
+    width: 50vw;
+  }
+  .meteor {
+    max-width: 75%;
+  }
+  .bigScreen {
+    display: block;
+  }
+  .littleScreen {
+    display: none;
   }
   .features {
     font-size: 140px;
@@ -739,10 +765,36 @@ button {
     padding: 4px 5px 2px 6px;
   }
   .carousel-3d {
-    width: 450px;
+    width: 550px;
   }
   .contentPage3 {
     width: auto;
+  }
+}
+
+@media (max-width: 1440px) {
+  .container {
+    max-width: 1024px;
+  }
+  .want {
+    font-size: 110px;
+  }
+  .w2 {
+    left: -136px;
+  }
+  .littleScreen {
+    display: block;
+  }
+  .bigScreen {
+    display: none;
+  }
+  .line_up {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .contentP6 {
+    padding: 70px 0;
   }
 }
 /*# sourceMappingURL=style.css.map */
