--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ img {
 
 .page1 {
   margin-top: 84px;
-  margin-bottom: 463px;
+  margin-bottom: 363px;
 }
 
 .header {
@@ -183,6 +183,7 @@ img {
 }
 
 .page2 {
+  padding-top: 100px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
