--- a/style.scss
+++ b/style.scss
@@ -51,7 +51,7 @@ img {
 
 .page1 {
     margin-top: 84px;
-    margin-bottom: 463px;
+    margin-bottom: 363px;
 }
 
 .header {
@@ -160,6 +160,7 @@ img {
 }
 
 .page2 {
+    padding-top: 100px;
     display: flex;
     justify-content: space-between;
     margin-bottom: 555px;
