--- a/style.scss
+++ b/style.scss
@@ -82,6 +82,7 @@ img {
 
 .head {
     display: flex;
+    justify-content: space-between;
 }
 
 .heading {
@@ -159,6 +160,13 @@ img {
     width: 100%;
 }
 
+.headContent {
+    width: 1025px;
+    background-image: url(img/headImg.png);
+    background-repeat: no-repeat;
+    background-position: top right;
+}
+
 .page2 {
     padding-top: 100px;
     display: flex;
@@ -193,7 +201,7 @@ img {
 }
 
 .pageTitle {
-    color: black;
+    color: #1A1A1A;
     //text-shadow: white 0 0 4px;
     -webkit-text-stroke: 2px white; //если что отключим (экспериментальная фича)
 }
@@ -601,6 +609,28 @@ button {
     cursor: pointer;
 }
 
+.buttonSubmit {
+    display: flex;
+    background: #74CBCF;
+    width: 273px;
+    height: 85px;
+    text-align: center;
+}
+
+.buttonPlaySubmit {
+    padding: 31px 70px;
+    font-family: SpaceMonoItalic;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 102%;
+    text-decoration: none;
+    color: black;
+}
+
+.buttonSubmit:hover {
+    box-shadow: 0 0 5px 4px #74CBCF;
+}
+
 .buttonContact {
     padding: 25px 41px 25px;
 }
@@ -629,6 +659,10 @@ button {
     }
     .w2 {
         left: -168px;
+    }
+    .headContent {
+        width: 700px;
+        background-size: 100%;
     }
     .meteors {
         width: 50vw;
@@ -681,11 +715,37 @@ button {
     .container {
         max-width: 1024px;
     }
+    .page1 {
+        margin-bottom: 250px;
+    }
     .want {
         font-size: 110px;
+        line-height: 110px;
     }
     .w2 {
         left: -136px;
+    }
+    .headContent {
+        width: 450px;
+        background-position: bottom 50px;
+    }
+    .headSubscription {
+        font-size: 18px;
+    }
+    .buttonPlay {
+        line-height: 37px;
+        padding: 10px 40px;
+        font-size: 18px;
+    }
+    .buttonShadow {
+        width: 180px;
+        height: 60px;
+    }
+    .page2 {
+        margin-bottom: 355px;
+    }
+    .page3 {
+        margin-bottom: 270px;
     }
     .littleScreen {
         display: block;
@@ -697,6 +757,109 @@ button {
         justify-content: flex-start;
     }
     .contentP6 {
-        padding: 70px 0;
+        padding: 20px 0 60px 0;
+    }
+    .page6 {
+        margin-bottom: 300px;
+    }
+    .animation {
+        width: 105px;
+        height: 150px;
+        margin-top: 50px;
+    }
+    .textScale {
+        font-size: 10px;
+    }
+    .leftTextScaleGender {
+        padding: 4px 50px 2px 6px;
+    }
+    .rightTextScaleGender {
+        padding: 4px 6px 2px 6px;
+    }
+    .leftTextScaleEd {
+        padding: 4px 49px 2px 6px;
+    }
+    .rightTextScaleEd {
+        padding: 4px 10px 2px 6px;
+    }
+    .leftTextScaleAge {
+        padding: 4px 45px 2px 6px;
+    }
+    .rightTextScaleAge {
+        padding: 4px 5px 2px 6px;
+    }
+    .text {
+        font-size: 14px;
+    }
+    .contentPage3 {
+        width: 450px;
+    }
+    .animation {
+        background-size: 100%;
+    }
+    .cardHeading {
+        font-size: 18px;
+    }
+    .meteors {
+        width: 35vw;
+    }
+    .line {
+        height: 39px;
+    }
+    .box_header {
+        font-size: 26px;
+    }
+    .box_text {
+        font-size: 16px;
+    }
+    .box {
+        width: 322px;
+        height: 215px;
+    }
+    .box_body {
+        background: #1A1A1A;
+        padding: 16px 10px 32px 26px;
+    }
+    .content_box {
+        margin-bottom: 130px;
+    }
+    .page5 {
+        margin-bottom: 230px;
+    }
+    .page6text {
+        margin-bottom: 70px;
+    }
+    .contentHeading {
+        margin-bottom: 64px;
+    }
+    .buttonDwnld {
+        padding: 10px 40px 10px 45px;
+    }
+    .buttonShadowDwnld {
+        width: 174px;
+    }
+    .buttonInst {
+        padding: 10px 45px 10px 50px;
+    }
+    .buttonShadowInst {
+        width: 172.5px;
+    }
+    .extension {
+        line-height: 140px;
+    }
+    .carousel-3d {
+        padding: 0;
+    }
+    .buttonContact {
+        padding: 15px 31px 15px;
+    }
+    .buttonPlaySubmit {
+        font-size: 18px;
+        line-height: normal;
+    }
+    .buttonSubmit {
+        width: 206px;
+        height: 65px;
+        margin-top: 20px;
     }
 }
