--- a/style.css
+++ b/style.css
@@ -203,9 +203,8 @@ img {
 }
 
 .headContent {
-  width: 800px;
-  background-image: url(img/battle.gif);
-  background-size: 100%;
+  width: 1025px;
+  background-image: url(img/headImg.png);
   background-repeat: no-repeat;
   background-position: top right;
 }
@@ -411,9 +410,6 @@ img {
 }
 
 .content_box {
-  background-image: url(img/bullets.gif);
-  background-repeat: repeat repeat;
-  background-size: 50%;
   margin-top: 120px;
   margin-bottom: 232px;
 }
