--- a/style.css
+++ b/style.css
@@ -707,11 +707,17 @@ img {
   margin: 0;
   width: 50%;
   -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
   transform-style: preserve-3d;
-  transition: -webkit-transform 0.5s;
   -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
   transition: transform 0.5s;
   transition: transform 0.5s, -webkit-transform 0.5s;
+  transition: transform 0.5s;
+  -webkit-transition: -webkit-transform 0.5s, -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s, -webkit-transform 0.5s;
+  transition: transform 0.5s, transform 0.5s;
+  transition: transform 0.5s, transform 0.5s, -webkit-transform 0.5s, -webkit-transform 0.5s;
 }
 
 .carousel-3d figure img,
