--- a/style.scss
+++ b/style.scss
@@ -587,11 +587,11 @@ img {
 .carousel-3d figure {
     margin: 0;
     width: 50%;
-    -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
-    transition: -webkit-transform 0.5s;
+    transform-style: preserve-3d;
     transition: transform 0.5s;
-    transition: transform 0.5s, -webkit-transform 0.5s;
+    transition: transform 0.5s;
+    transition: transform 0.5s, transform 0.5s;
 }
 
 .carousel-3d figure img,
